# SceneGraphRenderer

./: .gitignore  CMakeLists.txt  README.md  STYLE_GUIDE.md  dance.fbx  guy.fbx  idle.fbx  imgui.rar  install.bat  n_pixel.hlsl  pixel.hlsl  reload.bat  run.fbx  test.fbx
resources/engine/shaders/: blur_pixel.hlsl  blur_vertex.hlsl  compo_pixel.hlsl  def_pixel.hlsl  ssao_blur_pixel.hlsl  ssao_pixel.hlsl  ssao_vertex.hlsl
resources/tests/: anim_pixel.hlsl  anim_vertex.hlsl  floor.fbx  n_vertex.hlsl  pixel.hlsl  vertex.hlsl
src/: CMakeLists.txt
src/common/: closure.h  delegate.h  thread_pool.h
src/engine/EntityComponents/: Component.cpp  Component.h  ComponentMetadata.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneContainer.h
src/renderer/: animation_manager.cpp  animation_manager.h  bone.cpp  bone.h  camera.cpp  camera.h  drawable.cpp  drawable.h  enums.h  interface.h  model.cpp  model.h  profiler.cpp  profiler.h  render_system.cpp  render_system.h  render_system_defines.h  render_system_imgui.cpp  skeleton.cpp  skeleton.h  transform.cpp  transform.h  vertex.h  window.cpp  window.h
src/renderer/dx12/: d3d12_dds_texture_loader.cpp  d3d12_dds_texture_loader.h  dx12_cmd_queue.cpp  dx12_cmd_queue.h  dx12_command_list.cpp  dx12_command_list.h  dx12_const_buffer.cpp  dx12_const_buffer.h  dx12_descriptor_heap.cpp  dx12_descriptor_heap.h  dx12_device.cpp  dx12_device.h  dx12_fence.cpp  dx12_fence.h  dx12_imgui.cpp  dx12_pipeline_state.cpp  dx12_pipeline_state.h  dx12_render_target.cpp  dx12_render_target.h  dx12_root_signature.cpp  dx12_root_signature.h  dx12_shader.cpp  dx12_shader.h  dx12_staging_buffer.cpp  dx12_staging_buffer.h  dx12_texture.cpp  dx12_texture.h  dx12_texture_array.cpp  dx12_texture_array.h  dx12_viewport.cpp  dx12_viewport.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h
src/renderer/imgui/: imconfig.h  imgui.cpp  imgui_dock.h  imgui_dock.inl  imgui_user.h  imgui_user.inl  text_editor.cpp
src/renderer/imgui_/: imgui.cpp  imgui_dock.inl  imgui_user.h
src/renderer/math/: constants.hpp  mat.hpp  math_util.cpp  math_util.hpp  vec.hpp
src/renderer/scene_graph/: drawable_node.cpp  drawable_node.h  scene_graph.cpp  scene_graph.h  scene_node.cpp  scene_node.h  viewport_node.cpp  viewport_node.h
src/renderer/vk/: vk_command_list.cpp  vk_command_list.h  vk_command_queue.cpp  vk_command_queue.h  vk_defines.h  vk_device.cpp  vk_device.h  vk_fence.cpp  vk_fence.h  vk_internal.cpp  vk_internal.h  vk_pipeline_state.cpp  vk_pipeline_state.h  vk_render_target.cpp  vk_render_target.h  vk_resource.cpp  vk_resource.h  vk_root_signature.cpp  vk_root_signature.h  vk_shader.cpp  vk_shader.h  vk_staging_buffer.cpp  vk_staging_buffer.h  vk_texture.cpp  vk_texture.h  vk_texture_array.cpp  vk_texture_array.h  vk_texture_sampler.cpp  vk_texture_sampler.h  vk_viewport.cpp  vk_viewport.h
tests/: CMakeLists.txt
tests/BasicRenderingTest/: test.cpp
tests/ECSTest/: test.cpp
tests/renderer/: test.cpp
